objects/vlocity_ins__PartyMergeRequest__c.object
<CustomObject>
    <description>This Vlocity system object is used during Account or Contact merges to properly handle the merge request at the Party level. When an Account or Contact are merged using the Salesforce merge feature, Vlocity will place a merge request on this queue and process it in an after-insert trigger on this queue request object.</description>
    <fields>
        <fullName>vlocity_ins__IsInBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MasterId__c</fullName>
        <label>Master Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NonMasterId__c</fullName>
        <label>Non Master Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Party Merge Request</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__MasterId__c</columns>
        <columns>vlocity_ins__NonMasterId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Merge Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>